# Master-Arbeit

./: .gitignore  README.md  batchscript.sh  cpp-notes  rsync.sh
CppProject/: CMakeLists.txt  a.out  main.cpp
CudaProject/: 500  AutoAmplitude.cu  AutoCumulant.cu  AutoCumulantOBC.cu  AutoQuench-h.cu  AutoQuench.cu  AutoQuenchOBC.cu  AutoZ.cu  AutoZTest.cu  CMakeLists.txt  CuRandExample.cu  HIPQuench.cpp  HIPQuench.out  HIPScript.out  HIPadaptiaveStepsize.cpp  HIPadaptiveStepsize.cpp  HIPadaptiveStepsize.cu  HO.cu  Performance.cu  Quench.cu  RandomTimeTesting.cu  RandomTimeTesting.cuh  Relaxation.cu  Simulation-cuda.cuh  Simulation.cu  Simulation.cuh  SubsystemQuench.cu  SubsystemRelaxation.cu  a.out  adaptiveRocm.out  adaptiveRocm.out#  adaptiveStepsize.cpp  adaptiveStepsize.cu  compile.sh  compilev2.sh  constant_bat  constant_bath  deprecated-systems-cuda.cuh  deprecated-systems.cuh  fsda.h  (+31 more)
CudaProject/0.000000/: 0.txt  1-ner  1.txt
CudaProject/Trash/: HIPQuench.cpp  HIPQuench.out  HIPScript.out  HIPadaptiaveStepsize.cpp  HIPadaptiveStepsize.cpp  HIPadaptiveStepsize.cu  Performance.cu  Quench.cu  RandomTimeTesting.cu  Relaxation.cu  ThrustCurandExample.cu  adaptiveStepsize.cpp  adaptiveStepsize.cu  compile.sh  fsda.cpp  hipfft_utils.h  main-cleaned.cu  main.cpp  main.cu  parameters.cuh  quench.cpp  quench.cu  systems-square.cuh  systems.h
CudaProject/parameters/: para_path_0.txt  para_path_1.txt  para_set_0.txt  para_set_1.txt
Generated content/: structfunc.fftw
JuliaProject/: main.jl
Latex/: BA_Andreas_Weitzel.aux  BA_Andreas_Weitzel.blg  BA_Andreas_Weitzel.tex  BA_main_german.aux  (+45 more)
LearningProject/: Bath  CMakeLists.txt  CalcBinderCumulant  CalcCorrelationFunction  CalcDomainSize  ConvergenceCheck  ConvergenceCheck.cpp  ConvergenceCheckDiffusion  ConvergenceCheckDiffusion.cpp  Functions and Classes.h  GPUTry  GPUTry.cpp  Helpfunctions and Classes.h  Lattice.cpp  LatticeTrafo  NeighborPerfCheck  OdeintTest  OdeintTest.cpp  OdeintTest.h  OriginalBinderCumulant  Polymorphism  Simulation  Solvers.h  Systems.h  Testclass  Testclass.cpp  Testclass.h  TimeLeft  a.out  cpp-exec  kzm_silicon_2d.cpp  main  main.cpp  struct.func
LearningProject/BathTemperature/: Bath.cpp  Bath.h  bath
LearningProject/BrownianMotion/: main.cpp
LearningProject/Convergence/: ConvergenceCheck.cpp  ConvergenceCheckDiffusion.cpp
LearningProject/CurveFitting/: CalcBinderCumulant.cpp  CalcBinderCumulant.h  Curvefitting.cpp  Curvefitting.h  OriginalBinderCumulant.cpp  OriginalBinderCumulant.h  ResidiualXi.cpp  ResidiualXi.h  ResidualXi.out  ResidualXiWorkaround.cpp  ResidualXiWorkaround.h
LearningProject/DomainSize/: AllTrafo  CalcCorrelationFunction.cpp  CalcDomainSize.cpp  CalcDomainSize.h  CoulombFourierTrafo.out  FourierLatticeTrafo.cpp  FourierLatticeTrafo.h  LatticeFFT.cpp  LatticeFFT.h  LatticeFFTError.cpp  LatticeFFTError.out  LatticeFFTErrorLocal.cpp  LatticeFourierTransform.cpp  LatticeFourierTransform.h  Latticetrafo  QuenchCorrLength.cpp  QuenchCorrLength.h  QuenchTrafo.out  TestWithArg  TestingLatticeFFT.out  a.out  average  averageAdaptive  calcCorrFuncStandard  corr-func-trafo.csv  fftwtrafo  highTempApproach  highTempApproachLattice  highTempApproachLatticeTrafo  matplotlibcpp.h  matplotlibtest  matplotlibtest.cpp  trafoQuadratic  why.csv
LearningProject/FirstTry/: CMakeLists.txt  Testclass.cpp  kzm_silicon_2d.cpp  point_type.hpp  rng.cpp
LearningProject/FullInteraction/: main.cpp
LearningProject/Header/: Helpfunctions and Classes.h  Systems.h
LearningProject/LatticeCalculations/: Simulation.cpp  Simulation.h  configs.h
LearningProject/LatticeCalculations/CalcHandlers/: BinderHandler.h  QuenchProcessHandler.h  StructFactHandler.h  calcHandler.h  corrLengthHandler.h  secondCorrLenghtHandler.h
LearningProject/LatticeModel/: main.cpp
LearningProject/Odeint/: OdeintTest.cpp
LearningProject/SimpleInteraction/: main.cpp
LearningProject/Testing/: EigenCurveFitting.cpp  EigenCurveFitting.h  Factory.cpp  Factory.h  NeighborPerfCheck.cpp  NeighborPerfCheck.h  Polymorphism.cpp  Polymorphism.h  ResidualXi.out  TimeLeft.cpp  a.out  compile.sh  fftwMinimal.cpp  fftwMinimal.h  fftwMinimal.out  shelTEst
LearningProject/Trash/: Curvefitting  EigenCurveFitting  Factory  Latticetrafo  Latticetrafo2  OriginalBinderCumulant  Polymorphism  Testclass  corr-func-trafo.csv  struct.func.csv  struct1d.func  structfunc.fftw
LearningProject/Trash/BathTemperature/: Bath.cpp
LearningProject/Trash/Convergence/: ConvergenceCheckDiffusion.h
LearningProject/Trash/FirstTry/: CMakeLists.txt  Lattice.cpp  SolarSystem.cpp  Testclass.cpp  matrices.cpp  rng.h
LearningProject/Trash/FullInteraction/: a.out
LearningProject/Trash/GPUTries/: Cu-exec  GPUTry.cu  GPUTry.h
LearningProject/Trash/HarmonicOscillator/: main.cpp
LearningProject/Trash/LatticeModel/: CMakeLists.txt  main.h
LearningProject/Trash/SimpleInteraction/: RightAndDown.cpp
LearningProject/TwoStepMethod/: main.cpp
MinimalCudaProject/: AutoAmplitude.cu  AutoCumulantOBC.cu  AutoCumulantVectorialOBC.cu  AutoQuench-h.cu  AutoQuench.cu  AutoZ.cu  CMakeLists.txt  Simulation-cuda.cuh  SubsystemQuench.cu  SubsystemRelaxation-cuda.cu  main-cuda.cuh  main.cpp  main.cuh  observers.cuh  steppers.cuh  systems-cuda.cuh  systems.cuh
MinimalCudaProject/parameters/: para_quench_set_10.txt  para_quench_set_100.txt  para_quench_set_200.txt  para_quench_set_30.txt  para_quench_set_35.txt  para_quench_set_38.txt  para_quench_set_39.txt  para_quench_set_40.txt  para_quench_set_50.txt  para_quench_set_60.txt  para_quench_set_80.txt  para_set_10.txt  para_set_100.txt  para_set_101.txt  para_set_102.txt  para_set_103.txt  para_set_104.txt  para_set_105.txt  para_set_106.txt  para_set_107.txt  para_set_108.txt  para_set_109.txt  para_set_11.txt  para_set_110.txt  para_set_111.txt  para_set_112.txt  para_set_113.txt  para_set_114.txt  para_set_115.txt  para_set_116.txt  para_set_117.txt  para_set_118.txt  para_set_119.txt  para_set_12.txt  para_set_120.txt  para_set_121.txt  para_set_122.txt  para_set_123.txt  para_set_124.txt  para_set_125.txt  (+181 more)
(+221 files in other folders)
