cmake_minimum_required(VERSION 3.25)
project(LearningProject)

set(CMAKE_CXX_STANDARD 17)

include_directories(Trash/BathTemperature)
include_directories(Trash/BrownianMotion)
include_directories(Trash/Convergence)
include_directories(DomainSize)
include_directories(Trash/FirstTry)
include_directories(Trash/GPUTries)
include_directories(Trash/HarmonicOscillator)
include_directories(Header)
include_directories(Trash/LatticeModel)
include_directories(Trash/Odeint)
include_directories(Trash/SimpleInteraction)
include_directories(Testing)
include_directories(Trash/TwoStepMethod)

add_executable(LearningProject
        Trash/BathTemperature/Bath.cpp
        Trash/BathTemperature/Bath.h
        Trash/BrownianMotion/main.cpp
        Trash/BrownianMotion/main.h
        Trash/Convergence/ConvergenceCheck.cpp
        Trash/Convergence/ConvergenceCheckDiffusion.cpp
        Trash/Convergence/ConvergenceCheckDiffusion.h
        DomainSize/CalcCorrelationFunction.cpp
        DomainSize/CalcDomainSize.cpp
        DomainSize/CalcDomainSize.h
        DomainSize/FourierLatticeTrafo.cpp
        DomainSize/FourierLatticeTrafo.h
        DomainSize/matplotlibcpp.h
        DomainSize/matplotlibtest.cpp
        Trash/FirstTry/first_try.cpp
        Trash/FirstTry/kzm_silicon_2d.cpp
        Trash/FirstTry/Lattice.cpp
        Trash/FirstTry/main.cpp
        Trash/FirstTry/matrices.cpp
        Trash/FirstTry/matrices.h
        Trash/FirstTry/point_type.hpp
        Trash/FirstTry/rng.cpp
        Trash/FirstTry/rng.h
        Trash/FirstTry/SolarSystem.cpp
        Trash/FirstTry/Testclass.cpp
        Trash/FirstTry/Testclass.h
        Trash/FullInteraction/main.cpp
        Trash/GPUTries/GPUTry.cpp
        Trash/GPUTries/GPUTry.cu
        Trash/GPUTries/GPUTry.h
        Trash/HarmonicOscillator/main.cpp
        Trash/HarmonicOscillator/main.h
        "Header/Helpfunctions and Classes.h"
        Header/Solvers.h
        Header/Systems.h
        Trash/LatticeModel/main.cpp
        Trash/LatticeModel/main.h
        Trash/Odeint/OdeintTest.cpp
        Trash/Odeint/OdeintTest.h
        Trash/SimpleInteraction/main.cpp
        Trash/SimpleInteraction/main.h
        Trash/SimpleInteraction/RightAndDown.cpp
        Trash/SimpleInteraction/RightAndDown.h
        Testing/EigenCurveFitting.cpp
        Testing/EigenCurveFitting.h
        Testing/fftwMinimal.cpp
        Testing/fftwMinimal.h
        Testing/Polymorphism.cpp
        Testing/Polymorphism.h
        Trash/TwoStepMethod/main.cpp
        Trash/TwoStepMethod/main.h CurveFitting/Curvefitting.cpp CurveFitting/Curvefitting.h DomainSize/QuenchCorrLength.cpp DomainSize/QuenchCorrLength.h DomainSize/LatticeFFT.cpp DomainSize/LatticeFFT.h DomainSize/LatticeFFTError.cpp
        CurveFitting/ResidiualXi.cpp
        CurveFitting/ResidiualXi.h
        Testing/Factory.cpp
        Testing/Factory.h
        LatticeCalculations/Simulation.cpp
        LatticeCalculations/Simulation.h
        LatticeCalculations/CalcHandlers/calcHandler.h
        LatticeCalculations/CalcHandlers/BinderHandler.h
        LatticeCalculations/CalcHandlers/corrLengthHandler.h
        LatticeCalculations/CalcHandlers/secondCorrLenghtHandler.h
        LatticeCalculations/CalcHandlers/StructFactHandler.h)
